--- a/realw.cabal
+++ b/realw.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 14ffc8eb1835e3097abe458fc0c89892265e87e34c81a3ec7e5650bb0d028f1e
+-- hash: 95915f6ea7be75967c2be9899e54cd9c4c1b9b7b74fb9c974ec33cc48ea11080
 
 name:           realw
 version:        0.1.0.0
@@ -24,6 +24,7 @@ extra-source-files:
     README.md
     TODO
     LICENSE
+    data/quux.txt
 
 source-repository head
   type: git
@@ -42,12 +43,23 @@ library
       base >=4.7 && <5
   default-language: Haskell2010
 
+executable WC
+  main-is: Main.hs
+  other-modules:
+      Paths_realw
+  hs-source-dirs:
+      app/Ch01
+  ghc-options: -Wall
+  build-depends:
+      base >=4.7 && <5
+  default-language: Haskell2010
+
 executable sample
   main-is: Main.hs
   other-modules:
       Paths_realw
   hs-source-dirs:
-      app
+      app/sample
   ghc-options: -Wall
   build-depends:
       base >=4.7 && <5
