--- a/realw.cabal
+++ b/realw.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 23ea5998be1d601408ba15d1e899483cd01f31de34171ebcbc8ca12856618145
+-- hash: be85a2e96d0d547dfa68083715f0efac74b6e920cba484c3e058d6744827f164
 
 name:           realw
-version:        0.1.3.2
+version:        0.1.3.3
 synopsis:       Real World Haskell
 description:    Please see the README on GitHub at <https://github.com/erlnow/realh#readme>
 category:       Learning
@@ -54,6 +54,7 @@ library
       Ch03.Letwhere
       Ch03.ListADT
       Ch03.LocalFunction
+      Ch03.MyLength
       Ch03.MySecond
       Ch03.NestedLets
       Ch03.Nullable
