--- a/realw.cabal
+++ b/realw.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: dc92ebdf51e383ba41c7fa4a70e6a2a6c06475f46a97efc38fba2f971922cb6c
+-- hash: 1032c99e058d2e2d5ead651bcbf99236e21c5e9ce08de7098842971c4589261c
 
 name:           realw
 version:        0.1.3.3
@@ -62,6 +62,7 @@ library
       Ch03.Palindrome
       Ch03.Roygbiv
       Ch03.ShapeUnion
+      Ch03.SortByLength
       Ch03.Tree
       Ch03.Tuples
       MyLib
