--- a/realw.cabal
+++ b/realw.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1032c99e058d2e2d5ead651bcbf99236e21c5e9ce08de7098842971c4589261c
+-- hash: e112aeebea983bd2d4e1e01ee703493b33d7adec4828da05dbcb0a8b8468afdd
 
 name:           realw
 version:        0.1.3.3
@@ -50,6 +50,7 @@ library
       Ch03.GlobalVariable
       Ch03.GoodIndent
       Ch03.Guard
+      Ch03.Intersperse
       Ch03.Lendings
       Ch03.Letwhere
       Ch03.ListADT
