Exercises 10-13 from Chapter 3 (Ex.13 not finished)

--- a/realw.cabal
+++ b/realw.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 434e752db061e0ec319bcc325278b72660896a5e047dd7e28ada4844afad4da5
+-- hash: 5aca9bde3bc583d4cad5260169c4089fe26591d16f0dd577e6ec3919e86e1b88
 
 name:           realw
 version:        0.1.3.3
@@ -49,6 +49,7 @@ library
       Ch03.Distinction
       Ch03.GlobalVariable
       Ch03.GoodIndent
+      Ch03.GrahamScan
       Ch03.Guard
       Ch03.Height
       Ch03.Intersperse
